--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,42 @@
+body {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+}
 
+h1, h2, h3, h4, h5, h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar {
+  position: fixed;
+  width: 250px;
+  height: 100vh;
+  background: #121212;
+}
+
+.home {
+  background: #181818;
+  margin-left: 250px;
+}
+
+.taskbar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #282828;
+}
+.taskbar .taskbar__track {
+  display: flex;
+}
+.taskbar .taskbar__track > img {
+  height: 60px;
+}
 
 /*# sourceMappingURL=main.css.map */
