--- a/css/main.sass
+++ b/css/main.sass
@@ -1,1 +1,34 @@
 @import variables
+@import normalize
+
+.sidebar
+  position: fixed
+
+  width: 250px
+  height: 100vh
+
+  background: $sidebar-color
+
+.home
+  background: $home-color
+
+  margin-left: 250px
+
+.taskbar
+  position: fixed
+  bottom: 0
+
+  width: 100%
+  padding: 15px
+
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+  background: $taskbar-color
+
+  .taskbar__track
+    display: flex
+
+    > img
+      height: 60px
