--- a/css/variables.sass
+++ b/css/variables.sass
@@ -4,5 +4,6 @@ $secondary-color: #fff
 $light-color: #B3B3B3
 $dark-color: #1D1D1D
 
+$home-color: #181818
 $sidebar-color: #121212
 $taskbar-color: #282828
