refact: home.js - add: normalize.sass

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,26 +1,7 @@
 @import variables
 @import normalize
 @import home
-
-html 
-  font-size: 14px
-  font-family: 'Montserrat', sans-serif
-
-*
-  scroll-behavior: smooth
-
-hr
-  margin: 4px 0 16px 0
-  border: 0
-  border-bottom: 1px solid $taskbar-color
-
-.sidebar
-  position: fixed
-
-  width: 250px
-  height: 100vh
-
-  background: $sidebar-color
+@import sidebar
 
 .taskbar
   position: fixed
