--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,32 @@
+html {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
   color: #fff;
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6,
 p {
   margin: 0;
   padding: 0;
+}
+
+hr {
+  margin: 4px 0 16px 0;
+  border: 0;
+  border-bottom: 1px solid #303030;
+}
+
+ul {
+  list-style: none;
 }
 
 .home {
@@ -58,21 +77,6 @@ p {
   padding: 5px 0 0 0;
   color: #B3B3B3;
   font-size: 0.9rem;
-}
-
-html {
-  font-size: 14px;
-  font-family: "Montserrat", sans-serif;
-}
-
-* {
-  scroll-behavior: smooth;
-}
-
-hr {
-  margin: 4px 0 16px 0;
-  border: 0;
-  border-bottom: 1px solid #303030;
 }
 
 .sidebar {
