--- a/css/normalize.sass
+++ b/css/normalize.sass
@@ -1,12 +1,27 @@
 @import variables
 
+html 
+  font-size: 14px
+  font-family: 'Montserrat', sans-serif
+
 body
   margin: 0
   padding: 0
 
   color: $secondary-color
 
+*
+  scroll-behavior: smooth
+
 h1,h2,h3,h4,h5,h6,
 p
   margin: 0
   padding: 0
+
+hr
+  margin: 4px 0 16px 0
+  border: 0
+  border-bottom: 1px solid $taskbar-color
+
+ul
+  list-style: none
