--- a/css/normalize.sass
+++ b/css/normalize.sass
@@ -4,6 +4,8 @@ html
   font-size: 14px
   font-family: 'Montserrat', sans-serif
 
+  user-select: none
+
 body
   margin: 0
   padding: 0
@@ -20,8 +22,11 @@ p
 
 hr
   margin: 4px 0 16px 0
+
   border: 0
   border-bottom: 1px solid $taskbar-color
 
 ul
+  padding: 0
+
   list-style: none
