--- a/css/main.css
+++ b/css/main.css
@@ -31,56 +31,6 @@ ul {
   list-style: none;
 }
 
-.home {
-  margin: 0 0 80px 220px;
-  background: #181818;
-}
-.home .wrapperTracks {
-  padding: 20px 7% 5px;
-}
-.home .wrapperTracks .wrapperTracks__header {
-  display: flex;
-  justify-content: space-between;
-}
-.home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left {
-  border: 0;
-  background-color: transparent;
-  color: #B3B3B3;
-  font-family: Courier New, Courier, monospace;
-  font-size: 1.5rem;
-  outline: none;
-  cursor: pointer;
-}
-.home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right:hover, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left:hover {
-  color: #fff;
-}
-.home .wrapperTracks .wrapperTracks__header h2 {
-  width: 80%;
-}
-.home .wrapperTracks .wrapperList {
-  display: flex;
-  overflow: hidden;
-  scroll-snap-type: x mandatory;
-}
-.home .wrapperTracks .wrapperList .wrapperList__card {
-  display: flex;
-  flex-direction: column;
-  margin: 0 2% 0 0;
-  scroll-snap-align: start;
-}
-.home .wrapperTracks .wrapperList .wrapperList__card img {
-  width: 220px;
-}
-.home .wrapperTracks .wrapperList .wrapperList__card strong {
-  padding: 10px 0 0 0;
-  font-weight: 600;
-}
-.home .wrapperTracks .wrapperList .wrapperList__card p {
-  padding: 5px 0 0 0;
-  color: #B3B3B3;
-  font-size: 0.9rem;
-}
-
 .sidebar {
   position: fixed;
   padding: 0 25px;
@@ -131,22 +81,144 @@ ul {
   background: #13eb5f;
 }
 
+.home {
+  margin: 0 0 80px 220px;
+  background: #181818;
+}
+.home .wrapperTracks {
+  padding: 20px 7% 5px;
+}
+.home .wrapperTracks .wrapperTracks__header {
+  display: flex;
+  justify-content: space-between;
+}
+.home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left {
+  border: 0;
+  background-color: transparent;
+  color: #B3B3B3;
+  font-family: Courier New, Courier, monospace;
+  font-size: 1.5rem;
+  outline: none;
+  cursor: pointer;
+}
+.home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right:hover, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left:hover {
+  color: #fff;
+}
+.home .wrapperTracks .wrapperTracks__header h2 {
+  width: 80%;
+}
+.home .wrapperTracks .wrapperList {
+  display: flex;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+}
+.home .wrapperTracks .wrapperList .wrapperList__card {
+  display: flex;
+  flex-direction: column;
+  margin: 0 2% 0 0;
+  scroll-snap-align: start;
+}
+.home .wrapperTracks .wrapperList .wrapperList__card img {
+  width: 180px;
+}
+.home .wrapperTracks .wrapperList .wrapperList__card strong {
+  padding: 10px 0 0 0;
+  font-weight: 600;
+}
+.home .wrapperTracks .wrapperList .wrapperList__card p {
+  padding: 5px 0 0 0;
+  color: #B3B3B3;
+  font-size: 0.9rem;
+}
+
 .taskbar {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  padding: 15px;
+  height: 6%;
+  min-height: 50px;
+  padding: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #303030;
+  color: #B3B3B3;
 }
 .taskbar .taskbar__track {
   display: flex;
 }
-.taskbar .taskbar__track > img {
-  height: 60px;
+.taskbar .taskbar__track img {
+  height: 55px;
+}
+.taskbar .taskbar__track strong {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: normal;
+}
+.taskbar .taskbar__track p {
+  margin-top: 10px;
+  font-size: 0.8rem;
+}
+.taskbar .taskbar__track .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 15px;
+}
+.taskbar .taskbar__trackStatus {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.taskbar .taskbar__trackStatus > * {
+  margin: 0 5px;
+}
+.taskbar .taskbar__trackStatus i {
+  font-size: 0.9rem;
+  margin: 0 10px;
+}
+.taskbar .taskbar__trackStatus i:hover {
+  color: #fff;
+}
+.taskbar .taskbar__trackStatus i:active {
+  color: #8d8d8d;
+}
+.taskbar .taskbar__trackStatus .fa-play {
+  padding: 11px;
+  font-size: 0.9rem;
+  border: 1px solid #8d8d8d;
+  border-radius: 100%;
+}
+.taskbar .taskbar__trackStatus .fa-play:hover {
+  border: 1px solid #fff;
+}
+.taskbar .taskbar__trackStatus .fa-play:active {
+  border: 1px solid #8d8d8d;
+  color: #8d8d8d;
+}
+.taskbar .taskbar__trackStatus .audioProgress input {
+  width: 170px;
+  height: 4px;
+  border-radius: 100%;
+}
+.taskbar .taskbar__trackAudio {
+  padding: 25px;
+  display: flex;
+  align-items: center;
+}
+.taskbar .taskbar__trackAudio > * {
+  margin: 0 5px;
+}
+.taskbar .taskbar__trackAudio i:hover {
+  color: #fff;
+}
+.taskbar .taskbar__trackAudio i:active {
+  color: #8d8d8d;
+}
+.taskbar .taskbar__trackAudio input {
+  width: 100px;
+  height: 4px;
+  border-radius: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
