--- a/css/main.sass
+++ b/css/main.sass
@@ -1,24 +1,5 @@
 @import variables
 @import normalize
-@import home
 @import sidebar
-
-.taskbar
-  position: fixed
-  bottom: 0
-
-  width: 100%
-  height: 60px
-  padding: 15px
-
-  display: flex
-  justify-content: space-between
-  align-items: center
-
-  background: $taskbar-color
-
-  .taskbar__track
-    display: flex
-
-    > img
-      height: 60px
+@import home
+@import footer
