add: queen.index page - edit: fix sidebar's selection for li items

--- a/css/footer.sass
+++ b/css/footer.sass
@@ -53,7 +53,7 @@
         color: $secondary-color
         
       &:active
-        color: $extra-color
+        opacity: .7
 
 
     .fa-play
@@ -69,7 +69,7 @@
       
       &:active        
         border: 1px solid $extra-color
-        color: $extra-color
+        opacity: .7
 
     .audioProgress
       input
@@ -88,7 +88,7 @@
     i:hover
       color: $secondary-color
     i:active
-      color: $extra-color
+      opacity: .7
     
     input
       width: 100px
