--- a/css/home.sass
+++ b/css/home.sass
@@ -11,6 +11,9 @@
 
       .dirBtn
         .dirBtn__right, .dirBtn__left
+          padding: 0 10px
+          width: 10px
+
           border: 0
 
           background-color: transparent
@@ -21,6 +24,8 @@
 
           outline: none
           cursor: pointer
+
+          font-weight: lighter
 
           &:hover
             color: $secondary-color
