--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,18 @@ body {
   scroll-behavior: smooth;
 }
 
+a {
+  color: #8d8d8d;
+  cursor: default;
+  text-decoration: none;
+}
+a:hover {
+  color: #fff;
+}
+a:active {
+  opacity: 0.7;
+}
+
 h1, h2, h3, h4, h5, h6,
 p {
   margin: 0;
@@ -29,6 +41,28 @@ hr {
 ul {
   padding: 0;
   list-style: none;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  background: rgba(0, 0, 0, 0.35);
+  border: 1px solid #fff;
+  border-radius: 32px;
+  color: #fff;
+  font-size: 0.75rem;
+  font-weight: 800;
+  letter-spacing: 1.5px;
+  opacity: 0.8;
+  outline: none;
+  text-transform: uppercase;
+}
+button:hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+button:active {
+  opacity: 0.7;
 }
 
 .sidebar {
@@ -54,7 +88,7 @@ ul {
   cursor: default;
 }
 .sidebar ul li:active {
-  color: #8d8d8d;
+  opacity: 0.7;
 }
 .sidebar ul li i {
   margin: 0 5px;
@@ -77,7 +111,6 @@ ul {
   left: 0;
   width: 4px;
   height: 20px;
-  z-index: 2323;
   background: #13eb5f;
 }
 
@@ -93,6 +126,8 @@ ul {
   justify-content: space-between;
 }
 .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left {
+  padding: 0 10px;
+  width: 10px;
   border: 0;
   background-color: transparent;
   color: #B3B3B3;
@@ -100,6 +135,7 @@ ul {
   font-size: 1.5rem;
   outline: none;
   cursor: pointer;
+  font-weight: lighter;
 }
 .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right:hover, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left:hover {
   color: #fff;
@@ -181,7 +217,7 @@ ul {
   color: #fff;
 }
 .taskbar .taskbar__trackStatus i:active {
-  color: #8d8d8d;
+  opacity: 0.7;
 }
 .taskbar .taskbar__trackStatus .fa-play {
   padding: 11px;
@@ -194,7 +230,7 @@ ul {
 }
 .taskbar .taskbar__trackStatus .fa-play:active {
   border: 1px solid #8d8d8d;
-  color: #8d8d8d;
+  opacity: 0.7;
 }
 .taskbar .taskbar__trackStatus .audioProgress input {
   width: 170px;
@@ -213,12 +249,64 @@ ul {
   color: #fff;
 }
 .taskbar .taskbar__trackAudio i:active {
-  color: #8d8d8d;
+  opacity: 0.7;
 }
 .taskbar .taskbar__trackAudio input {
   width: 100px;
   height: 4px;
   border-radius: 100%;
+}
+
+.artistSection {
+  position: relative;
+  background: #181818;
+  width: 100%;
+  height: 100vh;
+}
+.artistSection .artistSection--overlay {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(to top, #181818 20%, rgba(0, 0, 0, 0.5) 70%);
+}
+.artistSection img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.artistSection h1 {
+  font-size: 6rem;
+  transform: translateY(-180px);
+}
+.artistSection .btn {
+  transform: translateY(-180px);
+}
+.artistSection .btn button:nth-child(1) {
+  background: #13eb5f;
+  border: 0;
+}
+.artistSection .btn button:nth-child(2) {
+  width: 140px;
+}
+.artistSection .selectSubPage {
+  display: flex;
+  font-weight: 600;
+  text-transform: uppercase;
+  transform: translateY(-180px);
+}
+.artistSection .selectSubPage li {
+  margin: 0 20px;
+  font-size: 0.9rem;
+  letter-spacing: 1.5px;
+}
+.artistSection .selectSubPage li:nth-child(1)::before {
+  position: absolute;
+  left: 38px;
+  bottom: -10px;
+  width: 30px;
+  height: 2px;
+  content: "";
+  background: #13eb5f;
 }
 
 /*# sourceMappingURL=main.css.map */
