--- a/css/normalize.sass
+++ b/css/normalize.sass
@@ -15,6 +15,16 @@ body
 *
   scroll-behavior: smooth
 
+a
+  color: $extra-color
+
+  cursor: default
+  text-decoration: none
+  &:hover
+    color: $secondary-color
+  &:active    
+    opacity: .7
+
 h1,h2,h3,h4,h5,h6,
 p
   margin: 0
@@ -30,3 +40,29 @@ ul
   padding: 0
 
   list-style: none
+
+button
+  width: 100px
+  height: 30px
+
+  background: rgba(0,0,0,.35)
+  border: 1px solid $secondary-color
+  border-radius: 32px
+
+  color: $secondary-color
+
+  font-size: .75rem
+  font-weight: 800
+  
+  letter-spacing: 1.5px
+
+  opacity: .8
+  outline: none
+  text-transform: uppercase
+
+  &:hover
+    opacity: 1
+    transform: scale(1.1)
+  
+  &:active
+    opacity: .7
