--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -26,7 +26,7 @@
         cursor: default
       
       &:active
-        color: $extra-color
+        opacity: .7
         
       i
         margin: 0 5px
@@ -54,7 +54,5 @@
 
   width: 4px
   height: 20px
-  
-  z-index: 2323
 
   background: $primary-color
