--- a/css/queen.sass
+++ b/css/queen.sass
@@ -1,9 +1,8 @@
 .artistSection
   position: relative
-  background: $home-color
+  margin: 0
 
-  width: 100%
-  height: 100vh // Timing
+  background: $home-color
 
   .artistSection--overlay
     position: absolute
@@ -11,54 +10,112 @@
     width: 100%
     height: 400px
 
-    background: linear-gradient(to top, $home-color 20%,rgba(0,0,0,.5) 70%)
+    background: linear-gradient(to top, $home-color 10%,rgba(0,0,0,.5) 70%)
 
   img
     width: 100%
     height: 400px
-    object-fit: cover
-  
-  h1
-    font-size:  6rem
-
-    transform: translateY(-180px)
-  
-  .btn
-    transform: translateY(-180px)
-
-    button:nth-child(1)
-      background: $primary-color
-      border: 0
-    button:nth-child(2)
-      width: 140px
     
-  .selectSubPage
-    display: flex
+    object-fit: cover
 
-    font-weight: 600
-    text-transform: uppercase
+  .artistSection__header
+    position: relative
 
-    transform: translateY(-180px)
+    margin-top: -200px
+    padding: 0 5%
 
-    li      
-      margin: 0 20px
-
-      font-size: .9rem
-      letter-spacing: 1.5px
-
-      &:nth-child(1)::before
-        position: absolute
-        left: 38px
-        bottom: -10px
-        
-        width: 30px
-        height: 2px
-
-        content: ""
-
+    h1
+      font-size:  6rem
+    
+    .btn
+      button:nth-child(1)
         background: $primary-color
+        border: 0
+      button:nth-child(2)
+        width: 140px
+      
+    .selectSubPage
+      display: flex
+
+      font-weight: 600
+      text-transform: uppercase
+
+      li      
+        margin: 0 20px
+
+        font-size: .9rem
+        letter-spacing: 1.5px
+
+        &:nth-child(1)::before
+          position: absolute
+          left: 130px
+          bottom: -10px
+          
+          width: 30px
+          height: 2px
+
+          content: ""
+
+          background: $primary-color
 
 
+  .mostPopular
+    margin-top: 40px
+    padding: 0 5%
+
+    .mostPopular__list
+      display: flex
+      flex-direction: column
+
+      li
+        display: flex
+        flex-direction: row
+
+        width: 100%
+        height: 38px
+
+        border-bottom: 1px solid $taskbar-color
+
+        &:hover
+          background-color: $taskbar-color
+
+        span
+          align-self: center
+          flex-basis: 40px
+          
+        :nth-child(3)
+          flex-basis: 100%
+  
+
+  .albumList    
+    padding: 0 5%
+
+    h3
+      padding: 5px 0 15px 0
+    
+    .albumList__piece
+      .albumList__piece--header
+        display: flex
+
+        > *
+          align-self: center
+
+        img
+          width: 135px
+          height: 135px
+        
+        .header__info
+          margin: 0 15px
+          font-size: 1.6rem
+
+          > *
+            margin: 5px 0
+
+          p
+            color: $extra-color
+
+            font-size: .9rem
+            font-weight: 600
         
 
 
