--- a/css/queen.sass
+++ b/css/queen.sass
@@ -46,19 +46,16 @@
         font-size: .9rem
         letter-spacing: 1.5px
 
-        &:nth-child(1)::before
-          position: absolute
-          left: 130px
-          bottom: -10px
-          
-          width: 30px
-          height: 2px
+      .overview     
+        position: relative
+        top: 25px
+        left: 25px
+        width: 30px
+        height: 2px
 
-          content: ""
+        background: $primary-color
 
-          background: $primary-color
-
-
+        
   .mostPopular
     margin-top: 40px
     padding: 0 5%
