add: audio folder - edit: queen.index player and queen.js light refactoring

--- a/css/footer.sass
+++ b/css/footer.sass
@@ -75,7 +75,9 @@
       input
         width: 170px
         height: 4px
-        border-radius: 100%      
+
+        border-radius: 100%
+        filter: invert(10%) sepia(15%) saturate(11368%) hue-rotate(670deg) brightness(95%) contrast(94%)
 
   .taskbar__trackAudio
     padding: 25px
