--- a/css/queen.sass
+++ b/css/queen.sass
@@ -77,7 +77,8 @@
           background-color: $taskbar-color
 
         span
-          align-self: center
+          display: flex
+          align-items: center
           flex-basis: 40px
           
         :nth-child(3)
@@ -91,6 +92,26 @@
       padding: 5px 0 15px 0
     
     .albumList__piece
+
+      li
+        display: flex
+        flex-direction: row
+
+        width: 100%
+        height: 38px
+
+        border-bottom: 1px solid $taskbar-color
+
+        &:hover
+          background-color: $taskbar-color
+
+        span
+          align-self: center
+          flex-basis: 40px
+          
+        :nth-child(3)
+          flex-basis: 100%
+
       .albumList__piece--header
         display: flex
 
@@ -116,3 +137,8 @@
         
 
 
+// Audio tag test
+
+// audio::-webkit-media-controls-play-button
+//   -webkit-appearance:none
+//   filter: invert(10%) sepia(15%) saturate(11368%) hue-rotate(670deg) brightness(95%) contrast(94%)
