--- a/css/main.css
+++ b/css/main.css
@@ -308,31 +308,48 @@ button:active {
   height: 2px;
   background: #13eb5f;
 }
-.artistSection .mostPopular {
-  margin-top: 40px;
-  padding: 0 5%;
+.artistSection .topNtop {
+  display: flex;
+  padding: 0 4%;
 }
-.artistSection .mostPopular .mostPopular__list {
+.artistSection .topNtop > * {
+  margin: 0 20px;
+}
+.artistSection .topNtop .mostPopular {
+  margin-top: 40px;
+  width: 50%;
+}
+.artistSection .topNtop .mostPopular .mostPopular__list {
   display: flex;
   flex-direction: column;
 }
-.artistSection .mostPopular .mostPopular__list li {
+.artistSection .topNtop .mostPopular .mostPopular__list li {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 38px;
   border-bottom: 1px solid #303030;
 }
-.artistSection .mostPopular .mostPopular__list li:hover {
+.artistSection .topNtop .mostPopular .mostPopular__list li:hover {
   background-color: #303030;
 }
-.artistSection .mostPopular .mostPopular__list li span {
+.artistSection .topNtop .mostPopular .mostPopular__list li span {
   display: flex;
   align-items: center;
   flex-basis: 40px;
 }
-.artistSection .mostPopular .mostPopular__list li :nth-child(3) {
+.artistSection .topNtop .mostPopular .mostPopular__list li :nth-child(3) {
   flex-basis: 100%;
+}
+.artistSection .topNtop .videos {
+  width: 50%;
+}
+.artistSection .topNtop .videos iframe {
+  width: 100%;
+  height: 88%;
+  border-radius: 4px;
+  border: 2px solid #303030;
+  transform: translateY(40px);
 }
 .artistSection .albumList {
   padding: 0 5%;
@@ -378,6 +395,18 @@ button:active {
   color: #8d8d8d;
   font-size: 0.9rem;
   font-weight: 600;
+}
+
+@media (max-width: 1100px) {
+  .topNtop {
+    justify-content: center;
+  }
+  .topNtop .mostPopular {
+    width: 80% !important;
+  }
+  .topNtop .videos {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
