--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 html {
+  min-width: 781px;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
   user-select: none;
@@ -283,6 +284,12 @@ button:active {
 .artistSection .artistSection__header h1 {
   font-size: 6rem;
 }
+.artistSection .artistSection__header .btn {
+  margin: 25px 0;
+}
+.artistSection .artistSection__header .btn button {
+  margin: 0 4px;
+}
 .artistSection .artistSection__header .btn button:nth-child(1) {
   background: #13eb5f;
   border: 0;
@@ -290,15 +297,26 @@ button:active {
 .artistSection .artistSection__header .btn button:nth-child(2) {
   width: 140px;
 }
+.artistSection .artistSection__header .btn button:nth-child(3) {
+  width: 32px;
+  padding: 5px;
+}
 .artistSection .artistSection__header .selectSubPage {
   display: flex;
   font-weight: 600;
   text-transform: uppercase;
 }
 .artistSection .artistSection__header .selectSubPage li {
-  margin: 0 20px;
+  margin: 0 16px;
   font-size: 0.9rem;
   letter-spacing: 1.5px;
+  opacity: 0.7;
+}
+.artistSection .artistSection__header .selectSubPage li:nth-child(1) {
+  opacity: 1;
+}
+.artistSection .artistSection__header .selectSubPage li:hover {
+  opacity: 1;
 }
 .artistSection .artistSection__header .selectSubPage .overview {
   position: relative;
@@ -335,11 +353,23 @@ button:active {
 }
 .artistSection .topNtop .mostPopular .mostPopular__list li span {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-basis: 40px;
 }
+.artistSection .topNtop .mostPopular .mostPopular__list li :nth-child(2) {
+  opacity: 0.4;
+}
+.artistSection .topNtop .mostPopular .mostPopular__list li :nth-child(2):hover {
+  opacity: 1;
+}
+.artistSection .topNtop .mostPopular .mostPopular__list li :nth-child(2):active {
+  opacity: 0.4;
+}
 .artistSection .topNtop .mostPopular .mostPopular__list li :nth-child(3) {
   flex-basis: 100%;
+  justify-content: left;
+  margin-left: 10px;
 }
 .artistSection .topNtop .videos {
   width: 50%;
