--- a/css/queen.sass
+++ b/css/queen.sass
@@ -28,11 +28,20 @@
       font-size:  6rem
     
     .btn
+      margin: 25px 0
+
+      button
+        margin: 0 4px
+
       button:nth-child(1)
         background: $primary-color
         border: 0
       button:nth-child(2)
         width: 140px
+      button:nth-child(3)
+        width: 32px
+        padding: 5px
+
       
     .selectSubPage
       display: flex
@@ -41,11 +50,18 @@
       text-transform: uppercase
 
       li      
-        margin: 0 20px
+        margin: 0 16px
 
         font-size: .9rem
         letter-spacing: 1.5px
 
+        opacity: .7
+      
+        &:nth-child(1)
+          opacity: 1
+        &:hover
+          opacity: 1
+          
       .overview     
         position: relative
         top: 25px
@@ -85,11 +101,22 @@
 
           span
             display: flex
+            justify-content: center
             align-items: center
             flex-basis: 40px
+
+          :nth-child(2)
+            opacity: .4
+            &:hover
+              opacity: 1
+            &:active
+              opacity: .4
             
           :nth-child(3)
             flex-basis: 100%
+            justify-content: left
+
+            margin-left: 10px
 
     .videos
       width: 50%
@@ -167,5 +194,3 @@
 
     .videos
       display: none
-    
-    
