--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   min-width: 781px;
   font-size: 14px;
@@ -126,6 +127,30 @@ button:active {
 .home .wrapperTracks .wrapperTracks__header {
   display: flex;
   justify-content: space-between;
+  font-size: 0.85rem;
+}
+.home .wrapperTracks .wrapperTracks__header .wrapperTracks--beatles:after {
+  content: "🚶🏼🚶🚶🏻‍♂️🚶🏻‍♀️";
+  display: inline-block;
+  transform: scaleX(-1);
+}
+.home .wrapperTracks .wrapperTracks__header .wrapperTracks--queen:after {
+  content: "👑";
+  display: inline-block;
+  position: relative;
+  top: -13px;
+  right: 78px;
+  font-size: 1.6rem;
+  transform: rotate(-20deg);
+}
+.home .wrapperTracks .wrapperTracks__header .wrapperTracks--black-sabbath:after {
+  content: "🎸";
+  display: inline-block;
+  position: relative;
+  top: -5px;
+  left: -41.4px;
+  font-size: 2.1rem;
+  transform: rotate(135deg);
 }
 .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__right, .home .wrapperTracks .wrapperTracks__header .dirBtn .dirBtn__left {
   padding: 0 10px;
@@ -158,6 +183,10 @@ button:active {
 }
 .home .wrapperTracks .wrapperList .wrapperList__card img {
   width: 180px;
+  transition: opacity 0.25s;
+}
+.home .wrapperTracks .wrapperList .wrapperList__card img:hover {
+  opacity: 0.25;
 }
 .home .wrapperTracks .wrapperList .wrapperList__card strong {
   padding: 10px 0 0 0;
