--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,8 @@ button:active {
 }
 .taskbar .taskbar__track {
   display: flex;
+  min-width: 200px;
+  max-width: 200px;
 }
 .taskbar .taskbar__track img {
   height: 55px;
@@ -250,23 +252,37 @@ button:active {
 .taskbar .taskbar__trackStatus i:active {
   opacity: 0.7;
 }
-.taskbar .taskbar__trackStatus .fa-play {
-  padding: 11px;
-  font-size: 0.9rem;
+.taskbar .taskbar__trackStatus .fa-play,
+.taskbar .taskbar__trackStatus .fa-pause {
+  padding: 13px;
+  font-size: 0.85rem;
   border: 1px solid #8d8d8d;
   border-radius: 100%;
 }
-.taskbar .taskbar__trackStatus .fa-play:hover {
+.taskbar .taskbar__trackStatus .fa-play:hover,
+.taskbar .taskbar__trackStatus .fa-pause:hover {
   border: 1px solid #fff;
 }
-.taskbar .taskbar__trackStatus .fa-play:active {
+.taskbar .taskbar__trackStatus .fa-play:active,
+.taskbar .taskbar__trackStatus .fa-pause:active {
   border: 1px solid #8d8d8d;
   opacity: 0.7;
+}
+.taskbar .taskbar__trackStatus .audioProgress {
+  display: flex;
+  align-items: center;
+}
+.taskbar .taskbar__trackStatus .audioProgress > * {
+  margin: 5px 10px 0;
+  font-size: 0.9rem;
 }
 .taskbar .taskbar__trackStatus .audioProgress input {
   width: 170px;
   height: 4px;
   border-radius: 100%;
+  filter: grayscale(100%);
+}
+.taskbar .taskbar__trackStatus .audioProgress input:hover {
   filter: invert(10%) sepia(15%) saturate(11368%) hue-rotate(670deg) brightness(95%) contrast(94%);
 }
 .taskbar .taskbar__trackAudio {
@@ -287,6 +303,10 @@ button:active {
   width: 100px;
   height: 4px;
   border-radius: 100%;
+  filter: grayscale(100%);
+}
+.taskbar .taskbar__trackAudio input:hover {
+  filter: invert(10%) sepia(15%) saturate(11368%) hue-rotate(670deg) brightness(95%) contrast(94%);
 }
 
 .artistSection {
