edit: fix queen html/css/js localstorage

--- a/css/footer.sass
+++ b/css/footer.sass
@@ -77,6 +77,8 @@
     .audioProgress
       display: flex
       align-items: center
+    
+      display: none
 
       > *
         margin: 5px 10px 0
