--- a/css/queen.sass
+++ b/css/queen.sass
@@ -117,6 +117,8 @@
             justify-content: left
 
             margin-left: 10px
+          :nth-child(4)            
+            font-size: .85rem
 
     .videos
       width: 50%
@@ -159,6 +161,8 @@
           
         :nth-child(3)
           flex-basis: 100%
+        :nth-child(4)
+          font-size: .85rem
 
       .albumList__piece--header
         display: flex
