--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,15 @@ button:active {
   background: #13eb5f;
 }
 
+.selectedItemLibrary:before {
+  content: "";
+  position: relative;
+  left: -25px;
+  width: 4px;
+  height: 20px;
+  background: #13eb5f;
+}
+
 .home {
   margin: 0 0 80px 220px;
   background: #181818;
