--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -56,3 +56,14 @@
   height: 20px
 
   background: $primary-color
+
+.selectedItemLibrary:before
+  content: ""
+
+  position: relative
+  left: -25px
+
+  width: 4px
+  height: 20px
+
+  background: $primary-color
